# data-wrangling-with-spark

./: README.md  pyproject.toml
notebooks/: data-wrangling-with-spark.ipynb  sparkify-sql.ipynb  sparkify.ipynb
